# dip-benchmark

./: .gitattribute  .latexmkrc  README.md  benchmark.py  main.tex  plot.py  pyproject.toml  refs.bib
assets/: results.csv
benchmarks/cuda/: Manifest.toml  Project.toml  README.md  benchmark.jl
benchmarks/matlab/: README.md  benchmark.m
benchmarks/opencv/: README.md  benchmark.py
benchmarks/sycl/: .gitignore  benchmark.cpp
benchmarks/visiongl/: .clangd  CMakeLists.txt  README.md  benchmark.cpp
cuda/: Manifest.toml  Project.toml  benchmark.jl
matlab/: README.md  benchmark.m
opencv/: .gitignore  README.md  benchmark.py  pyproject.toml
opencv-python/: benchmark.py
plot/: main.py
sections/: 01-intro.tex  02-objectives.tex  03-theory.tex  04-methodology.tex  05-development.tex  06-results.tex  07-conclusions.tex  08-future.tex
sycl/: .gitignore  CMakeLists.txt  CMakePresets.json  MIGRATION_GUIDE.md  README.md  README_bindless.md  benchmark.cpp  benchmark_bindless.cpp  example_differences.cpp  test_comparison.sh  vcpkg.json
visiongl/: .clang-format  .gitignore  CMakeLists.txt  benchmark.cpp  vcpkg.json
