[project]
name = "opencv-benchmark"
version = "0.1.0"
description = "Benchmark of basic image processing operations with Python and OpenCV"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.10.0.84",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]
